# bfsi-sales-bot

./: README.md  app.py  env.example  main.py  pyproject.toml  requirements.txt  run_streamlit.py  streamlit_app.py
bot/: analyzer.py  api.py  auth.py  creator.py  database.py  parser.py  schemas.py  utils.py
data/: bfsi_bot.db
data/analysis/: SDF_analysis_1746719585.md
data/parsed/: user_1_doc_3_7a99fa6d-d631-42b6-a5e2-8e878cba0c18_BFSI Product Overview – SBI YONO.docx.md  user_1_doc_4_2f8bdafd-22eb-414c-b2d7-586eddbb6f9b_AI Sales Agent Persona.docx.md
data/prompts/: SDF_server_bot_knowledge_base.md  SDF_server_bot_persona.md  test_server_bot_knowledge_base.md  test_server_bot_persona.md
data/prompts/Arshim_20250508_185918/digital_native/: client_type.json  questions.json  responses.json
data/prompts/Arshim_20250508_185918/insurance_buyer/: client_type.json  questions.json  responses.json
data/prompts/Arshim_20250508_185918/investment_explorer/: client_type.json  questions.json  responses.json
data/prompts/Arshim_20250508_185918/loan_applicant/: client_type.json  questions.json  responses.json
data/prompts/Arshim_20250508_185918/rural_adopter/: client_type.json  questions.json  responses.json
data/prompts/Arshim_20250508_185918/savings_seeker/: client_type.json  questions.json  responses.json
data/prompts/SDF_20250508_212129/: rural_new_adopter_prompt.txt  tech_savvy_millennial_prompt.txt
data/uploads/: 2f8bdafd-22eb-414c-b2d7-586eddbb6f9b_AI Sales Agent Persona.docx  6dfb7fb2-c6ff-4553-bf2d-a8fa20744167_BFSI Product Overview – SBI YONO.docx
(+9 files in other folders)
